--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.0",
     "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
