--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "appco",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://preborist.github.io/AppCo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -9,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "chart.js": "^3.5.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
@@ -28,7 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
